--- a/index.html
+++ b/index.html
@@ -104,23 +104,23 @@
             return false;
         }
 
-        let preDo = {
-            "Not selected":{
-                "eng":"",
-                "kor":""
-            },
-            "Bricks Reading 250_1 Unit_11":{
-                "eng":"Triathlon? What's that?\nThe word triathlon comes from two ancient Greek words.\nThe Greek word trei means three and the word athlos means contest.\nTriathlon means three contests.\nA triathlon is a long race with three separate sports: swimming, cycling, and running.\nHistory of the Triathlon\nHistorians believe the triathlon may have started in France, in the 1920s or 1930s.\nAt this time, France had a popular event called Les Trois Sports (the three sports).\nIn these races, competitors swam, rode bicycles, and ran a foot race.\nThe first modern triathlon was held in San Diego in 1974, and 46 people took part in it.\nThe triathlon became an Olympic event at the Summer Olympics in Sydney, Australia, in 2000.\nOlympic Triathlon\nIf you want to be an Olympic triathlon champion, you must be very, very fit.\nThe swim is 1.5 km long.\nIt can be in a lake, a river, or in a swimming pool.\nRight after the swim, you must cycle for 40 km.\nAthletes don't take a break between events.\nThe final event is a 10 km run.\nAthletes spend almost all their time training to get their bodies ready.\nPush Yourself\nMost triathlon athletes say the sport is their favorite because it is so difficult.\nTheir bodies don't get a chance to rest.\nBut triathlon competitors like seeing how far they can push their bodies.\nDo you want to try a triathlon?",
-                "kor":"트라이애슬론? 그것은 무엇인가?\n‘triathlon' 이란 단어는 두개의 고대 그리스 단어에서 왔다.\n그리스 단어 tri는 '셋'을 의미하고 단어 athlos는 '대회'를 의미한다.\ntriathlon은 ‘세가지 대회'라는 뜻이다.\n트라이애슬론 경기는 수영, 자전거타기, 그리고 달리기라는 세 가지 별도의 스포츠를 하는 장거리 경주이다.\n트라이애슬론의 역사\n역사가들은 트라이애슬론이 1920년대나 1930년대 프랑스에서 시작한 것으로 생각한다.\n그 당시, 프랑스에는 ‘러 뜨와 스퍼(세 가지 스포츠)'라고 불리는 인기 있는 행사가 있었다.\n이 경주에서는 참가자들이 수영을 하고, 자전거를 타고 나서 도보 경주를 했다.\n최초의 근대식 트라이애슬론은 1974년에 샌디에고에서 개최되었고 46명이 참가했었다.\n이 트라이애스론은2000년 호주 시드니에서 열린 하계 올림픽에서 올림픽 경기가 되었다.\n올림픽 트라이애슬론\n만약에 당신이 올림픽 트라이애슬론 챔피언이 되길 원한다면, 당신은 매우 매우 건강해야 한다.\n수영은 1.5km이다.\n호수, 강 혹은 수영장이 될 수 있다.\n수영을 하고 나서 바로 당신은 40km를 자전거를 타야 한다.\n운동 선수들은 두 경기 사이에 휴식을 취할 수 없다.\n마지막 경기는 10km 달리기이다.\n운동 선수들은 경기에 대비해 몸을 만들기 위해 그들의 대부분의 시간을 훈련하는데 보낸다.\n스스로 채찍질해라\n대부분의 트라이애슬론 선수들은 이 경기가 너무 어렵기 때문에 그들이 좋아하는 거라고 말한다.\n그들의 몸은 쉴 틈이 없다.\n그러나 트라이애슬론 참가자들은 그들이 얼마나 그들의 몸을 몰아붙일 수 있는지를 보는 것을 좋아한다.\n당신은 트라이애슬론을 해보고 싶은가?"
-            },
-            "Bricks Reading 250_1 Unit_12":{
-                "eng":"Run until it hurts. Then run some more.\nMy dad said that to me when I was 13 years old.\nThose words still live in my heart today.\nI liked being an athlete and took part in many sports.\nMy favorite was the triathlon.\nI competed every year in high school.\nI wanted to go to the Olympics.\nThen, when I was 17 years old, I had a car accident.\nI lost my leg.\nThe doctors told me I might not walk again.\nThey told me, You are lucky to be alive. Forget the Olympics.\nThey gave me an artificial leg.\nI practiced getting used to it.\nWhenever I felt pain, I remembered my dad's words.\nBy the end of the year, I could walk again.\nThen I saw something exciting on the news.\nThe triathlon will be an official event in the 2016 Paralympics in Brazil.\nI had a goal again.\nNow, I train every day, and think of that gold medal.\nIn the morning? I swim in a lake without my artificial leg.\nWe won't be allowed to use artificial legs during the swim.\nAfter that, I put on my artificial leg and get on my bicycle.\nThen I cycle for 40 km.\nFinally, I do my running practice.\nI'm excited to go to Brazil in two years.\nI hope I can make my dad proud.",
-                "kor":"‘아플 때까지 달려라. 그러고 나서 좀 더 달려라.'\n우리 아빠는 내가 13살 때 나에게 이렇게 말씀하셨다.\n이 단어들은 오늘 내 가슴 속에 여전히 살아있다.\n나는 운동 선수가 되기를 원했고 다양한 스포츠 경기에 참가했었다.\n내가 가장 좋아한 운동은 트라이애슬론이었다.\n나는 고등학교 때 매년 트라이애슬론 경기에 참가했다.\n나는 올림픽에 참가하기를 원했다.\n내가 17살이 되었을 때, 나는 자동차 사고를 당했다.\n나는 다리 하나를 잃었다.\n의사들은 나에게 다시는 걸을 수 없을 것이라고 말했다.\n그들은 '네가 살아남은 것이 행운이야. 올림픽은 잊거라.' 라고 말했다.\n그들은 나에게 인공 다리(의족)를 주었다.\n나는 그것에 익숙해지려고 연습 했다.\n내가 고통을 느낄 때 마다, 나는 아빠의 말씀을 기억했다.\n그 해 말쯤, 나는 다시 걸을 수 있었다.\n그러고 나서 나는 뉴스에서 흥미로운 것을 보았다.\n'트라이애슬론이 2016년 브라질 장애인 올림픽에서 공식 경기가 될 것이다.'\n나는 다시 목표를 가졌다.\n지금, 나는 매일 훈련하고, 금메달을 머리에 떠올린다.\n아침에, 나는 의족 없이 호수에서 수영을 한다.\n우리는 수영을 하는 동안에 의족을 사용하는 것이 허용되지 않을 것이다.\n그 후에, 나는 의족을 끼고 자전거에 오른다.\n그러고 나서 나는 40km를 자전거로 달린다.\n마지막으로, 나는 달리기 연습을 한다.\n나는 2년 후에 브라질에 가는 것에 대해 매우 흥분해있다.\n나는 우리 아빠의 자랑이 될 수 있었으면 좋겠다."
-            }
-        }
-
         function load(){
+            let preDoX = {};
+            const url1 = 'https://raw.githubusercontent.com/oeiar/ExamTester/main/testData.json'
+            const response = await fetch(url1);
+            const data = await response.text();
+            console.log(data);
+
+            preDoX = JSON.parse(data);
             preT.innerHTML = "";
+
+            const ordered = {};
+
+            let preDo = {};
+            Object.keys(preDoX).sort().forEach(function(key) {
+                preDo[key] = preDoX[key];
+            });
+
             let optionGroups = {};
             Object.keys(preDo).forEach(function(key){
                 let ks = key.split(" ");
