--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             padding-right: 13px;
             padding-top: 10px;
             padding-bottom: 10px;
+            cursor: pointer;
         }
 
         select {
