--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         textarea {
             border-radius: 10px;
             padding: 5px;
+            width: 95%;
         }
 
         button {
