--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         .question {
             font-size: 18px;
-            font-weight: 400;
+            font-weight: lighter;
             height:38px;
         }
     </style>
