--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             array[randId] = tmp;
 
             array2[curId] = array2[randId];
-            array2[randId] = tmp;
+            array2[randId] = tmp2;
           }
           return {"a":array,"b":array2};
         }
