--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         async function load(){
             let preDoX = {};
-            const url1 = 'https://raw.githubusercontent.com/oeiar/ExamTester/main/testData.json'
+            const url1 = 'https://oein.github.io/ExamTester/testData.json'
             const response = await fetch(url1);
             const data = await response.text();
 
